--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTMl/CSS Lab1</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Chirpus inc.</h1>
+        <h1>chirpus inc.</h1>
         <nav>
             <ul>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a class="button" href="#">Hire Us</a></li>
             </ul>
-            <a class="button" href="#">Hire Us</a>
         </nav>
     </header>
     <main>
-        <h2>Chirpus inc.</h2>
+        <h2>chirpus inc.</h2>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ipsum molestias eaque magnam, soluta quasi, aut
             sit assumenda iste labore dignissimos illo repudiandae atque qui sequi minus tenetur excepturi ad.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid maiores, ducimus exercitationem aliquam,
+            quibusdam nobis voluptatum quaerat recusandae accusantium unde ipsa! Nemo laborum fugiat id excepturi
+            voluptatem, earum quo modi?
         </p>
     </main>
 
