--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Work</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a class="button" href="#">Hire Us</a></li>
+                <li><a class="button top" href="#">Hire Us</a></li>
             </ul>
         </nav>
     </header>
@@ -30,9 +30,17 @@
             quibusdam nobis voluptatum quaerat recusandae accusantium unde ipsa! Nemo laborum fugiat id excepturi
             voluptatem, earum quo modi?
         </p>
+        </div>
+
     </main>
 
-    <a class="button" href="#">Scroll Down</a>
+    <div class="container">
+        <div class="large-child"></div>
+        <div class="medium-child"></div>
+        <div class="small-child"></div>
+    </div>
+
+    <a class="button bottom" href="#">Scroll Down</a>
 
 
 </body>
